# fintrack-account-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
migrations/: 0001_initial_schema.sql  0002_add_currency_to_accounts.sql
src/: app_state.rs  main.rs
src/cache/: mod.rs
src/controllers/: account_controller.rs  account_type_controller.rs  budget_controller.rs  budget_setup_controller.rs  category_controller.rs  mod.rs  transaction_category_total_controller.rs  transaction_controller.rs  transaction_type_controller.rs
src/db/: connection.rs  mod.rs
src/middleware/: auth_middleware.rs
src/models/: account_types.rs  accounts.rs  budget_setups.rs  budgets.rs  categories.rs  mod.rs  pagination.rs  sub_transactions.rs  transaction_category_totals.rs  transaction_types.rs  transactions.rs
src/rabbitmq/: consumer.rs  import_processor.rs  mod.rs
src/routes/: account_routes.rs  account_type_routes.rs  budget_routes.rs  budget_setup_routes.rs  category_routes.rs  mod.rs  transaction_category_total_routes.rs  transaction_routes.rs  transaction_type_routes.rs
src/services/: account_service.rs  account_type_service.rs  budget_service.rs  budget_setup_service.rs  category_service.rs  mod.rs  transaction_category_total_service.rs  transaction_service.rs  transaction_type_service.rs
tests/: integration_tests.rs
