[package]
name = "account-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono", "migrate"] }
anyhow = "1.0"
dotenv = "0.15"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14.0"
serde_test = "1.0"
serde_qs = "1.1.1"
tower = { version = "0.5", features = ["util"] }
